# Koaloader

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE.txt  README.adoc  README.md  build.ps1  pre_build.ps1  vcpkg.json
.github/workflows/: build-project.yml  ci.yml  print-info.yml
res/: Koaloader.config.json  Koaloader.json  Koaloader.schema.json  build_config.gen.h  extra_build_config.gen.h  version.gen.rc
src/: main.cpp  pch.hpp
src/config/: config.cpp  config.hpp
src/exports/: dinput8.cpp  version.cpp  xinput9_1_0.cpp
src/koaloader/: koaloader.cpp  koaloader.hpp
